// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilteredList /> should render a basic filtered list 1`] = `
Array [
  <Fragment
    key="0"
  >
    <div>
      United States
    </div>
  </Fragment>,
  <Fragment
    key="1"
  >
    <div>
      united states
    </div>
  </Fragment>,
]
`;

exports[`<FilteredList /> should render a case sensitive filtered list 1`] = `
<Fragment
  key="0"
>
  <div>
    united states
  </div>
</Fragment>
`;

exports[`<FilteredList /> should render a filtered list with no filters 1`] = `
Array [
  <Fragment
    key="0"
  >
    <div>
      Australia
    </div>
  </Fragment>,
  <Fragment
    key="1"
  >
    <div>
      New Zealand
    </div>
  </Fragment>,
  <Fragment
    key="2"
  >
    <div>
      United States
    </div>
  </Fragment>,
  <Fragment
    key="3"
  >
    <div>
      united states
    </div>
  </Fragment>,
  <Fragment
    key="4"
  >
    <div>
      Europe
    </div>
  </Fragment>,
]
`;

exports[`<FilteredList /> should render a filtered list with no results 1`] = `""`;

exports[`<FilteredList /> should render a filtered list with no results and a no data callout string 1`] = `"could not find any results for your query"`;

exports[`<FilteredList /> should render an async filtered list 1`] = `
Array [
  <Fragment
    key="0"
  >
    <div>
      Australia
    </div>
  </Fragment>,
  <Fragment
    key="1"
  >
    <div>
      New Zealand
    </div>
  </Fragment>,
  <Fragment
    key="2"
  >
    <div>
      United States
    </div>
  </Fragment>,
  <Fragment
    key="3"
  >
    <div>
      united states
    </div>
  </Fragment>,
  <Fragment
    key="4"
  >
    <div>
      Europe
    </div>
  </Fragment>,
]
`;

exports[`<FilteredList /> should render an async filtered list with error and errorComponent being a function 1`] = `
<div>
  rejected
</div>
`;

exports[`<FilteredList /> should render an async filtered list with error and errorComponent being a string 1`] = `"blah"`;
